# pyrtools

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  Gpyr.py  JBhelpers.py  LICENSE  Lpyr.py  README.md  README.txt  SCFpyr.py  Spyr.py  Wpyr.py  __init__.py  binomialFilter.py  blur.py  blurDn.py  comparePyr.py  compareRecon.py  convolve.c  corrDn.py  edges.c  entropy2.py  histo.py  idx2LB.py  imGradient.py  internal_pointOp.h  lenna-256x256.tif  maxPyrHt.py  mkAngle.py  mkAngularSine.py  mkFract.py  mkR.py  mkRamp.py  mkZonePlate.py  modulateFlip.py  myModule.c  namedFilter.py  pointOp.py  (+22 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
DATA/: Curie.pgm  Einstein.pgm
TESTS/: .coveragerc  unitTests.py
TESTS/matFiles/: blur3.mat  blurDn5.mat  blurDn6.mat  buildGpyr3.mat  buildGpyr4.mat  buildLpyr4.mat  buildLpyr7.mat  buildSCFpyr3.mat  buildSFpyr10.mat  buildSFpyr8.mat  buildSpyr12.mat  buildSpyr3.mat  buildSpyr8.mat  buildWpyr16.mat  buildWpyr18.mat  buildWpyr3.mat  buildWpyr5.mat  cconv2_0.mat  cconv2_2.mat  cconv2_3.mat  cconv2_4.mat  cconv2_7.mat  clip1.mat  corrDn2.mat  mkGaussian2.mat  mkGaussian4.mat  mkRamp3.mat  mkSine0.mat  mkSquare4.mat  upBlur0.mat  upBlur10.mat  upBlur8.mat  zconv2_1.mat  zconv2_3.mat
TUTORIALS/: 01_tools.ipynb  02_pyramids.ipynb  03_steerability.ipynb  03_steerable_pyramids.ipynb  pyramids.ipynb  tools.ipynb
docs/: conf.py  environment.yml  index.rst  installation.rst  pyrtools.pyramids.c.rst  pyrtools.pyramids.rst  quickstart.rst  tutorial3.nblink
docs/tutorials/: 03_steerable_pyramids.nblink  tutorial1.nblink  tutorial2.nblink
pyPyrTools/: Gpyr.py  JBhelpers.py  Lpyr.py  SCFpyr.py  SFpyr.py  Spyr.py  Wpyr.py  __init__.py  blurDn.py  cconv2.py  clip.py  corrDn.py  factorial.py  get_filter.py  histoMatch.py  imStats.py  kurt2.py  makeChangelog.py  mkAngle.py  mkAngularSine.py  mkDisc.py  mkGaussian.py  mkImpulse.py  mkR.py  mkSine.py  mkSquare.py  namedFilter.py  nextSz.py  pointOp.py  pyPyrTools.py  pyPyrUtils.py  range2.py  rconv2.py  rcosFn.py  round.py  shift.py  showIm.py  skew2.py  sp3Filters.py  steer.py  (+4 more)
pyPyrTools/TESTS/: unitTests.py
pyPyrTools/TUTORIALS/: pyramids.ipynb
pyrtools/: Gpyr.py  Lpyr.py  SCFpyr.py  SFpyr.py  Spyr.py  Windows.c  Wpyr.py  __init__.py  binomialFilter.py  blur.py  blurDn.py  cconv2.py  comparePyr.py  compareRecon.py  convolutions.py  corrDn.py  entropy2.py  histo.py  histoMatch.py  imGradient.py  imStats.py  image_tools.py  kurt2.py  mkFract.py  namedFilter.py  pyPyrTools.py  pyPyrUtils.py  pyramid.py  rcosFn.py  round.py  roundVal.py  shift.py  showIm.py  sp5Filters.py  strictly_decreasing.py  synthetic_images.py  upBlur.py  upConv.py  utils.py  var2.py  (+1 more)
pyrtools/TESTS/: unitTests.py
pyrtools/_to_delete/: JBhelpers.py  LB2idx.py  histoMatch.py  mkDisc.py  mkImpulse.py  mkZonePlate.py  modulateFlip.py  (+2 more)
(+293 files in other folders)
